# 27-cap2-graph-mathplotlib

./: README.md  pyproject.toml  report.md
src/graph/: crew.py  main.py
src/graph/config/: agents.yaml  tasks.yaml
src/graph/tools/: graph_tool.py
