[project]
name = "graph"
version = "0.1.0"
description = "graph using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
graph = "graph.main:run"
run_crew = "graph.main:run"
train = "graph.main:train"
replay = "graph.main:replay"
test = "graph.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
